# infernet-monorepo

./: .env.sample  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  PUBLISHING.md  README-INTERNAL.md  README.md  gcp.env.sample  publishing.md  pyproject.toml  vercel.json
libraries/infernet_cli/: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
libraries/infernet_cli/docs/: config.yml  index.md  usage.md
libraries/infernet_cli/docs/overrides/: main.html
libraries/infernet_cli/src/infernet_cli/: __init__.py  github.py  node.py  recipe.py  service.py
libraries/infernet_cli/src/infernet_cli/cli/: __init__.py  docker.py  options.py
libraries/infernet_cli/tests/: test_cli.py  test_docker.py  test_github.py  test_node.py  test_recipe.py  test_service.py
libraries/infernet_client/: .gitignore  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml
libraries/infernet_client/docs/: config.yml  index.md  quickstart.md  usage.md
libraries/infernet_client/docs/overrides/: main.html
libraries/infernet_client/docs/stylesheets/: extra.css
libraries/infernet_client/src/infernet_client/: __init__.py  chain_utils.py  client.py  error.py  node.py  router.py  types.py
libraries/infernet_client/src/infernet_client/chain/: abis.py  rpc.py  subscription.py  token.py  wallet.py  wallet_factory.py
libraries/infernet_client/src/infernet_client/cli/: __init__.py  options.py
libraries/infernet_client/tests/: helpers.py  test_client.py
libraries/infernet_ml/: .gitignore  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml
libraries/infernet_ml/docs/: architecture.md  artifacts.md  config.yml  ezkl.md  ezkl_artifacts.md  index.md  models.md  quickstart.md  vector.md  vectors.md
libraries/infernet_ml/docs/infernet_ml/utils/: common_types.md  css_mux.md  hf_types.md  model_loader.md  service_models.md
libraries/infernet_ml/docs/infernet_ml/utils/codec/: css.md  vector.md
libraries/infernet_ml/docs/infernet_ml/workflows/: exceptions.md
libraries/infernet_ml/docs/infernet_ml/workflows/inference/: bark_hf_inference_workflow.md  base_inference_workflow.md  css_inference_workflow.md  hf_inference_client_workflow.md  onnx_inference_workflow.md  tgi_client_inference_workflow.md  torch_inference_workflow.md  tts_inference_workflow.md
libraries/infernet_ml/docs/infernet_ml/workflows/utils/: common_types.md
libraries/infernet_ml/docs/overrides/: main.html
libraries/infernet_ml/docs/stylesheets/: extra.css
libraries/infernet_ml/scripts/: .gitignore  ezkl_artifact_generation.py  linreg.py  upload_llms.py  upload_models.py
libraries/infernet_ml/src/infernet_ml/resource/: artifact_manager.py  repo_id.py  types.py
libraries/infernet_ml/src/infernet_ml/services/: ezkl.py  onnx.py  torch.py  types.py
libraries/infernet_ml/src/infernet_ml/utils/: common_types.py  css_models.py  css_mux.py  css_utils.py  diffusion_utils.py  ezkl_models.py  ezkl_utils.py  fileutils.py  hf_types.py  model_analyzer.py  model_loader.py  model_manager.py  onnx_utils.py  retry.py  service_models.py  spec.py
libraries/infernet_ml/src/infernet_ml/utils/codec/: ezkl_codec.py  vector.py
libraries/infernet_ml/src/infernet_ml/utils/specs/: ml_model_id.py  ml_model_info.py  ml_type.py
libraries/infernet_ml/src/infernet_ml/workflows/: exceptions.py
libraries/infernet_ml/src/infernet_ml/workflows/inference/: bark_hf_inference_workflow.py  base_inference_workflow.py  css_inference_workflow.py  hf_inference_client_workflow.py  onnx_inference_workflow.py  stable_diffusion_workflow.py  tgi_client_inference_workflow.py  (+1 more)
libraries/infernet_ml/src/infernet_ml/zk/: proof_utils.py
libraries/infernet_ml/test/: test_css_inference_workflow.py  test_ezkl_artifacts.py  test_ezkl_verify_from_repo_id.py  test_hf_inference_client_workflow.py  test_load_model.py  test_model_analyzer.py  test_model_manager.py  test_onnx_inference_workflow.py  test_stable_diffusion_workflow.py  test_tgi_client_inference_workflow.py
libraries/infernet_ml/test/codec/: test_css.py  test_vector.py
libraries/infernet_ml/test/resource/: test_model_manager_uploading.py
libraries/infernet_ml/test/resource/sample_model/: .gitignore  iris.onnx  iris.torch
libraries/infernet_ml/test/torch_inference/: iris_classification_model.py  test_torch_inference_workflow.py
libraries/ritual_pyarweave/: CHANGELOG.md  Makefile  README.md  pyproject.toml
projects/infernet_client/: README.md  openapi.yaml  pyproject.toml
projects/infernet_client/src/infernet_client/: __init__.py  __main__.py  chain_utils.py  client.py  types.py
projects/infernet_client/src/infernet_client/cli/: __init__.py  options.py
projects/infernet_client/tests/: helpers.py  shared.py  test_client.py
projects/infernet_client/tests/deploy/: docker-compose.yaml
projects/infernet_ml/: .gitignore  CHANGELOG  Makefile  README.md  mkdocs.yml  pyproject.toml
projects/infernet_ml/docs/: index.md
projects/infernet_ml/src/infernet_ml/utils/: common_types.py  css_mux.py  encoding_utils.py  hf_types.py  model_loader.py  service_models.py
projects/infernet_ml/test/: test_bark_hf_inference_workflow.py  test_css_inference_workflow.py  test_encoding_utils.py  test_hf_inference_client_workflow.py  test_hf_inference_workflow.py  test_load_model.py  test_onnx_inference_workflow.py  test_stable_diffusion_workflow.py  test_tgi_client_inference_workflow.py
projects/infernet_ml/test/codec/: test_css.py  test_vector.py
projects/infernet_ml/test/torch_inference/: README.md  test_torch_inference_workflow.py
projects/ritual_arweave/: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
projects/ritual_arweave/src/ritual_arweave/: __init__.py  __main__.py  cli.py  file_manager.py  model_manager.py  types.py  utils.py
projects/ritual_arweave/test/: conftest.py  test_file_manager.py  test_model_manager.py  test_repo_manager.py  util.py  utils.py  wallet.json
projects/ritual_arweave/test/resources/: version.json
projects/ritual_arweave/test/resources/mock_model/: mymodel
projects/ritual_pyarweave/: README.md  pyproject.toml
(+213 files in other folders)
