[project]
name = "ritual-pyarweave"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "ritual", email = "hello@ritual.net" }
]
dependencies = [
    "arrow>=1.3.0,<2.0.0",
    "python-jose>=3.3.0,<4.0.0",
    "pycryptodome>=3.19.1,<4.0.0",
    "requests>=2.31.0,<3.0.0",
    "erlang_py>=2.0.7,<3.0.0",
    "pqdm>=0.2.0,<1.0.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ar", "src/bundlr"]
