[project]
name = "infernet-client"
version = "0.3.0"
description = "Infernet Node REST client"
authors = [
    { name = "Stelios Rousoglou", email = "stelios@ritual.net" }
]
dependencies = [
    "aiohttp>=3.9.2,<4.0.0",
    "click>=8.1.7,<9.0.0",
    "eth-account>=0.11.0,<1.0.0",
    "eth-typing>=4.0.0,<5.0.0",
    "web3>=6.11.0,<7.0.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
"infernet-client" = "infernet_client:main"

[project.scripts]
"infernet" = "infernet_client:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/infernet_client"]
