[project]
name = "infernet-client"
version = "0.0.3"
description = "Infernet Node REST client"
authors = [
    { name = "Stelios Rousoglou", email = "stelios@ritual.net" }
]
dependencies = [
    "aiohttp>=3.9.2,<4.0.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/infernet_client"]
