[project]
name = "ritual-arweave"
version = "0.1.0-3"
description = "Add your description here"
authors = [
    { name = "arshan-ritual", email = "arshan@ritual.net" }
]
dependencies = [
    "pyarweave @ git+https://github.com/ritual-net/pyarweave.git",
    "python-dotenv>=1.0.0,<2.0.0",
    "click>=8.1.7,<9.0.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[project.scripts]
"ritual-arweave" = "ritual_arweave:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ritual_arweave"]
